fix: early failure detection for builder-push containers (#337)